// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DSL validateDSL() invalid code should handle \`no definitions\` 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 16,
    "endLineNumber": 4,
    "extraInformation": {},
    "message": "mismatched input '<EOF>' expecting {INDENT, NEWLINE, WS}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 11,
    "startLineNumber": 4,
  },
]
`;

exports[`DSL validateDSL() invalid code should handle \`no relations\` 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
]
`;

exports[`DSL validateDSL() invalid keywords should handle invalid \`and\` 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 25,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 'self' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() invalid keywords should handle invalid \`as\` 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 19,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'a'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 21,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 's' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 20,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() invalid keywords should handle invalid \`as\` 2`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 19,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'a'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 21,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 's' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 20,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() invalid keywords should handle invalid \`but not\` 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 25,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 'self' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() invalid keywords should handle invalid \`define\` 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 7,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 'dec' expecting 'define'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 4,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() invalid keywords should handle invalid \`or\` 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 25,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 'self' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() invalid keywords should handle invalid \`self\` 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 23,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 'se' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() semantics should allow model with relations starting with as 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 25,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "extraneous input 'self' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
  {
    "endColumn": 4,
    "endLineNumber": 6,
    "extraInformation": {},
    "message": "mismatched input 'type' expecting <EOF>",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 0,
    "startLineNumber": 6,
  },
]
`;

exports[`DSL validateDSL() semantics should allow reference from other relation 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 17,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 15,
    "startLineNumber": 5,
  },
  {
    "endColumn": 22,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 'self' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() semantics should allow same relation name in from 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 29,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 27,
    "startLineNumber": 5,
  },
  {
    "endColumn": 34,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 'self' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 30,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() semantics should allow self reference 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 25,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 'self' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() semantics should be able to handle more than one error 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 27,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 'writer' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() semantics should gracefully handle error 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 25,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 'self' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() semantics should handle duplicated definition 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 25,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 'self' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() semantics should handle invalid \`invalid and\` 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 25,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 'self' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() semantics should handle invalid \`invalid but not\` 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 25,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 'self' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() semantics should handle invalid \`invalid from\` 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 25,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 'self' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() semantics should handle invalid \`invalid or\` 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 25,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 'self' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() semantics should handle invalid \`relation not define\` 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 27,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "extraneous input 'reader' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() semantics should handle invalid \`relation not define\` where name is substring of other word 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 24,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "extraneous input 'def' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() semantics should handle invalid \`self-error\` 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 27,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "extraneous input 'writer' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() semantics should handle invalid \`self-ref in but not\` 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 25,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 'self' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() semantics should identify correct error line number if there are spaces 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 19,
    "endLineNumber": 6,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 17,
    "startLineNumber": 6,
  },
  {
    "endColumn": 24,
    "endLineNumber": 6,
    "extraInformation": {},
    "message": "mismatched input 'self' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 20,
    "startLineNumber": 6,
  },
]
`;

exports[`DSL validateDSL() semantics should not allow impossible self reference 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 27,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 'member' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() semantics should not allow self reference in from relation 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 29,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 27,
    "startLineNumber": 5,
  },
  {
    "endColumn": 34,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "mismatched input 'self' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 30,
    "startLineNumber": 5,
  },
]
`;

exports[`DSL validateDSL() should correctly parse a simple sample 1`] = `
[
  {
    "endColumn": 10,
    "endLineNumber": 2,
    "extraInformation": {},
    "message": "mismatched input '1' expecting '1.1'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 9,
    "startLineNumber": 2,
  },
  {
    "endColumn": 20,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "missing ':' at 'as'",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 18,
    "startLineNumber": 5,
  },
  {
    "endColumn": 25,
    "endLineNumber": 5,
    "extraInformation": {},
    "message": "extraneous input 'self' expecting {<EOF>, NEWLINE}",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 21,
    "startLineNumber": 5,
  },
  {
    "endColumn": 4,
    "endLineNumber": 7,
    "extraInformation": {},
    "message": "mismatched input 'type' expecting <EOF>",
    "severity": 8,
    "source": "SyntaxError",
    "startColumn": 0,
    "startLineNumber": 7,
  },
]
`;
